--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -54,7 +54,7 @@
     </mat-form-field>
     <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Fecha de nacimiento</mat-label>
-        <input matInput [matDatepicker]="picker" placeholder="Ingresar fecha de nacimiento" name="fecha" formControlName="fechaNacieminto">
+        <input matInput [matDatepicker]="picker" placeholder="Ingresar fecha de nacimiento" name="fecha" formControlName="fechaNacieminto" [readonly]="true">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
         <mat-error>
@@ -83,9 +83,10 @@
         <input matInput placeholder="Enter your name" name="dolencias" formControlName="dolencias">
         </mat-form-field>
     </div>
-   
-    <button mat-raised-button color="primary" (click)="register()">Registarse</button>
-    <a routerLink="/login">inicar sesion</a>
+   <br>
+    <button mat-raised-button color="primary" (click)="register()" style="align-items: center;">Registarse</button>
+    <button mat-raised-button color="primary" (click)="iniciarSesion()">Iniciar Sesion</button>
+
 
 
 
