--- a/src/app/profesor/home/home.component.scss
+++ b/src/app/profesor/home/home.component.scss
@@ -391,8 +391,9 @@ body{
   position: relative;
   width: 315px; /* Remove for full width */
   height: 450px; /* Remove for full width */
-  margin:30px auto;
+  margin:4% ;
   box-shadow: 0 0 100px rgba(0,0,0, .3);
+  Display: Inline-block;
 }
 .card-header{
   position: relative;
