--- a/src/app/profesor/home/home.component.html
+++ b/src/app/profesor/home/home.component.html
@@ -143,15 +143,16 @@
 </div>
 </div>
 <div *ngIf="ver=='bloques'">
-  <br>
 <button mat-raised-button color="secundary" (click)="nuevoBloque()">Agregar Nuevo Bloque</button>
+
+  <br>
 
   <div class="card">
       <div class="card-header"
     style="background-image: url(https://www.google.com/imgres?imgurl=https%3A%2F%2Feurofitness.com%2Fwp-content%2Fuploads%2F2020%2F03%2FCu%25C3%25A1l-es-la-mejor-hora-para-ir-al-gym-y-por-qu%25C3%25A9.jpg&imgrefurl=https%3A%2F%2Feurofitness.com%2Fblog-deportes%2Fcual-es-la-mejor-hora-para-ir-al-gym-y-por-que%2F&tbnid=oorjumQWJ1cDcM&vet=12ahUKEwih4Y_S8aT6AhU0tpUCHV-JBtgQMygSegUIARCOAg..i&docid=alYj0VlW3XXMpM&w=1000&h=667&q=gym%20image&client=safari&ved=2ahUKEwih4Y_S8aT6AhU0tpUCHV-JBtgQMygSegUIARCOAg)"
       >
             <div class="card-header-bar">
-              <button (click)="eliminarBloque()" class="btn-message"><span class="sr-only">Message</span></button>
+              <button (click)="eliminarBloque(bloque)" class="btn-message"><span class="sr-only">Message</span></button>
               <a href="#" class="btn-menu"><span class="sr-only">Menu</span></a>
             </div>
 
@@ -189,6 +190,56 @@
           </div>
       </div>
   </div>
+
+
+
+
+
+
+
+  <div class="card" *ngFor="let b of bloques">
+    <div class="card-header"
+  style="background-image: url(https://www.google.com/imgres?imgurl=https%3A%2F%2Feurofitness.com%2Fwp-content%2Fuploads%2F2020%2F03%2FCu%25C3%25A1l-es-la-mejor-hora-para-ir-al-gym-y-por-qu%25C3%25A9.jpg&imgrefurl=https%3A%2F%2Feurofitness.com%2Fblog-deportes%2Fcual-es-la-mejor-hora-para-ir-al-gym-y-por-que%2F&tbnid=oorjumQWJ1cDcM&vet=12ahUKEwih4Y_S8aT6AhU0tpUCHV-JBtgQMygSegUIARCOAg..i&docid=alYj0VlW3XXMpM&w=1000&h=667&q=gym%20image&client=safari&ved=2ahUKEwih4Y_S8aT6AhU0tpUCHV-JBtgQMygSegUIARCOAg)"
+    >
+          <div class="card-header-bar">
+            <button (click)="eliminarBloque(b)" class="btn-message"><span class="sr-only">Message</span></button>
+            <a href="#" class="btn-menu"><span class="sr-only">Menu</span></a>
+          </div>
+
+          <div class="card-header-slanted-edge">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
+              <a href="#" class="btn-follow"><span class="sr-only">Follow</span></a>
+          </div>
+    </div>
+
+    <div class="card-body">
+        <h2 class="name">{{b.nombre}}</h2>
+        <h4 class="job-title">hecha por profe Juan</h4>
+        <div class="bio">{{b.descripcion}}</div>
+        <div class="social-accounts">
+          <!--<a href="#"><img src="https://res.cloudinary.com/dj14cmwoz/image/upload/v1491077480/profile-card/images/dribbble.svg" alt=""><span class="sr-only">Dribbble</span></a>
+          <a href="#"><img src="https://res.cloudinary.com/dj14cmwoz/image/upload/v1491077480/profile-card/images/twitter.svg" alt=""><span class="sr-only">Twitter</span></a>
+          <a href="#"><img src="https://res.cloudinary.com/dj14cmwoz/image/upload/v1491077480/profile-card/images/instagram.svg" alt=""><span class="sr-only">Instagram</span></a> -->
+        </div>
+    </div>
+
+    <div class="card-footer">
+        <div class="stats">
+            <div class="stat">
+              <span class="label">Tiempo total</span>
+              <span class="value">10'</span>
+            </div>
+            <div class="stat">
+              <span class="label">Dificultad</span>
+              <span class="value">{{bDificultadPromedio(b)}}</span>
+            </div>
+            <div class="stat">
+              <span class="label">N° ejercicios</span>
+              <span class="value">{{bSize(b)}}</span>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 
 <div>
